    * FIX: Fixed login/login confusions with index page caching

    WATO:
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)

1.2.0p3:
    Mulitisite
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible

    WATO
    * Added "profile" option to be configurable via browser
    * FIX: It is now possible to create clusters in empty folders
    * FIX: Fixed problem with complaining empty ListOf() valuespecs

    Livestatus
    * FIX: comments_with_info in service table was always empty

    Checks & Agents:
    * FIX: Linux mk_logwatch: iregex Parameter was never used

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.
    * parent scan: skip gateways that are reachable via PING
    * Allow subcheck to be in a separate file (e.g. foo.bar)
    * Contacts can now define *_notification_commands attributes which can now
      override the default notification command check-mk-notify
    * SNMP scan: fixed case where = was contained in SNMP info
    * check_imap_folder: new active check for searching for certain subjects
      in an IMAP folder
    * cmk -D shows multiple agent types e.g. when using SNMP and TCP on one host

    Checks & Agents:
    * New Checks for Siemens Blades (BX600)
    * New Checks for Fortigate Firewalls
    * Netapp Checks for CPU Util an FC Port throughput
    * FIX: megaraid_pdisks: handle case where no enclosure device exists
    * FIX: megaraid_bbu: handle the controller's learn cycle. No errors in that period.
    * mysql_capacity: cleaned up check, levels are in MB now
    * jolokia_info, jolokia_metrics: new rewritten checks for jolokia (formerly
      jmx4perl). You need the new plugin mk_jokokia for using them