@@ -24,6 +24,7 @@
     Mulitisite
     * Added "view" parameter to dashlet_pnpgraph webservice
     * FIX: BI: Assuming "OK" for hosts is now possible
+    * FIX: Fixed error in makeuri() calls when no parameters in URL
 
     WATO
     * Added "profile" option to be configurable via browser
